# fantastic-octo-fiesta

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: cross_compile.yml  update_cargo_version.yml  upload_assets.yml  versioning.yml
src/: commands.rs  handlers.rs  main.rs  personas.json  structures.rs  users.rs  utils.rs
