[package]
name = "rustgpt-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = { version = "0.11.6", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
dotenvy = "0.15.6"
serde_json = "1.0.94"
serde = "1.0.156"
anyhow = "1.0.69"
log = "0.4.17"
pretty_env_logger = "0.4.0"