[package]
name = "rustgpt-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = { version = "0.11.6", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.14.0", default-features = false, features = ["rt-multi-thread"] }
dotenvy = { version = "0.15.6", default-features = false, features = [] }
serde_json = { version = "1.0.94", default-features = false, features = [] }
serde = { version = "1.0.156", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false, features = [] }
sensible-env-logger = { version = "0.3.2", default-features = false, features = [] }
unicode-segmentation = { version = "1.10.1", default-features = false, features = [] }
clap = { version = "4.2.0", default-features = false, features = ["std"] }